Fix variables panel to prevent scrolling on tablet

--- a/js/VariablePanel/VariablePanel.css
+++ b/js/VariablePanel/VariablePanel.css
@@ -7,6 +7,7 @@
 	transition-property: height;
 	transition-duration: 350ms;
 	border-top: 1px solid #ccc;
+	overflow-y: hidden;
 }
 
 	[data-variables-visible="true"] #LaserCanvasVariablesPanel {
